# tick_data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tick_data_spec.md
docs/: requirements_specification.md
models/: README.md
notebooks/: 01_data_exploration.ipynb
scripts/: preprocess.py  train.py
src/data/: bar_aggregator.py  loader.py  preprocessor.py
src/env/: __init__.py  actions.py  reward.py  trading_env.py
src/features/: microstructure.py  price_features.py  technical.py  volume_features.py
