[project]
name = "tick-rl-trading"
version = "0.1.0"
description = "Reinforcement Learning Day Trading System using TSE Tick Data"
requires-python = ">=3.9"

dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "stable-baselines3[extra]>=2.0.0",
    "gymnasium>=0.29.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pyarrow>=12.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py39"]
